--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	
 	<link rel="stylesheet" href="lib/jquery.mobile-1.3.2/jquery.mobile-1.3.2.min.css" />
 	<link href="css/photoswipe.css" type="text/css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/phonee.css" />	
 	<style type="text/css">
 		div.gallery-row:after { clear: both; content: "."; display: block; height: 0; visibility: hidden; }
 		div.gallery-item { float: left; width: 33.333333%; }
@@ -22,7 +23,7 @@
 	<script type="text/javascript" src="lib/code-photoswipe-jQuery-1.0.11.min.js"></script>
 	
 	<script type="text/javascript">
-		
+	
 		/*
 			Este ejemplo muestra cómo configurar PhotoSwipe usando jQuery Mobile.
 		*/
@@ -42,7 +43,7 @@
 	</script>
 <style>
 	#titulo{
-		background-color:#82FA58;
+		
 		color: #000000v;
 		 font-style:inherit;
 	font-family:Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -53,32 +54,48 @@
 	}
 	
 	#2{
-		background-color:#82FA58;
+		
 		color: #000000v;
 		 font-style:inherit;
 	font-family:Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	
 	}
-	body{
-		background-color:#82FA58;
+	
+	
+	#pro{
+	color: red;
+
 	}
+	           #content{
+                background-image:url(img/fondo.jpg);
+                /* background-size: 100% 100%;
+                 -moz-background-size: 100% 100%;*/
+                width: auto;
+                height: 800px;
+            }
 	
-	
-	</style>
+    </style>
+ 
+
+
 
 
 </head> 
 <body> 
 
-<div data-role="page" id="Home" theme="b">
+<div data-role="page" id="Home" data-theme="c">
 
 	<div data-role="header">
 		<h1>Ni&ntilde;a Nena o simple Karly</h1>
 	</div>
 	
-	<div data-role="content" >	
-          <h4 id="titulo">Hola  hize muchas locuras y la seguire haciendo por que vales demasiado para mi <br>siempre me dijiste mi pag y siempre pense en hacerla con todas las veces que ya no te busque se quedaron a medias<br> hoy la termine pero cambio un poco ahora es mobile tampoco se como una aplicacion como esta te podria servir <br>pense en agregarle una calculadora o una agenda pero solo le agregare mis valioso tesoro <h1 id="tu" css align="center" >tu
-          </h1> <br> <h4 id="titulo">Y tu crecimiento en tu empresa sabes que te admiro por la fortaleza que tienes la pasion y determinacion para hacer tus cosas </h4>
+	<div data-role="content"  id="content">	
+  <!--  <IMG SRC="img/fondo.jpg">-->
+
+
+          <h4 id="titulo" align="center">Hola  hize muchas locuras y la seguire haciendo por que vales demasiado para mi <br>siempre me dijiste mi pag y siempre pense en hacerla con todas las veces que ya no te busque se quedaron a medias<br> hoy la termine pero cambio un poco ahora es mobile tampoco se como una aplicacion como esta te podria servir <br>pense en agregarle una calculadora o una agenda pero solo le agregare mis valioso tesoro <h1 id="tu" css align="center" >tu
+          </h1> <br> <h4 id="titulo" align="justify">Y tu crecimiento en tu empresa sabes que te admiro por la fortaleza que tienes la pasion y determinacion para hacer tus cosas </h4>
+          <h4 id="pro" css align="justify" css color red; > Cuando un artista encuentra su inspiracion solo los dioses pueden arrebartersela y a un asi seguirira buscandola hasta Hades</h4>
 			
 		<ul data-role="listview" data-inset="true">
 			<li><a href="#Gallery1">Galería de Imágenes</a></li> 
@@ -96,10 +113,11 @@
 
 <div data-role="page" id="Gallery1" class="gallery-page">
 
-	<div data-role="header">
+	<div data-role="header" data-theme="d">
 		<h1>Galería de Imágenes</h1>
 	</div>
-
+ <div class="ui-bar ui-bar-b">
+	<h3><a href="#Home" data-role="button" data-mini="true">regresar</a></h3>
 	<div data-role="content">			
 		<div class="gallery">	
 			<div class="gallery-row">		
